--- a/config.json
+++ b/config.json
@@ -15,8 +15,9 @@
     1
   ],
   "weights": {
-    "male-1.png": "5",
-    "collared-shirt.png": "2",
-    "white-tee-shirt.png": "3"
+    "male-1.png": "3",
+    "Artboard 1.png": "3",
+    "collared-shirt.png": "3",
+    "white-shirt.png": "3"
   }
 }
