--- a/config.json
+++ b/config.json
@@ -11,28 +11,57 @@
   "outputPath": "/Users/marleeroth/Desktop/ZeNFT/output/",
   "imageUrl": "/",
   "order": [
-    5,
     1,
-    4,
+    6,
+    5,
     2,
+    4,
     3,
     0
   ],
   "weights": {
-    "glasses.png": "10",
+    "ball-whistle.png": "10",
+    "brown-watch.png": "10",
+    "dumbell.png": "10",
+    "earing.png": "10",
+    "glasses.png": "1",
+    "green-watch-white-face.png": "01",
     "green-watch.png": "10",
+    "juggling-balls.png": "10",
+    "keys-green-tag.png": "10",
+    "server.png": "1",
+    "whistle.png": "01",
+    "blue.png": "0101010",
+    "funky.png": "01",
+    "greenfunk.png": "101",
+    "grey.png": "01",
+    "greydiant.png": "01",
+    "orange.png": "01010",
+    "zencolor.png": "10",
     "male-1.png": "10",
-    "black-bald-beard.png": "10",
-    "full-hair-black-beard.png": "10",
-    "full-hair-black.png": "10",
-    "hair-brown.png": "10",
-    "green-geo-top.png": "10",
-    "name-tag-shirt.png": "10",
-    "t-shirt.png": "10",
-    "white-green-shoe.png": "10",
-    "gleen.png": "10",
-    "jar.png": "10",
-    "platform.png": "10",
-    "shadow.png": "10"
+    "male-2.png": "01",
+    "bald.png": "010",
+    "black-bald-beard.png": "1",
+    "black-beard-hair.png": "010",
+    "blonde-bald-brow.png": "10",
+    "blonde-bald.png": "1",
+    "blonde-no-beard.png": "0110",
+    "blonde.png": "0",
+    "full-hair-black.png": "0",
+    "hair-brown.png": "0",
+    "chef.png": "001",
+    "green-geo-top.png": "01",
+    "lab-coat.png": "1",
+    "name-tag-shirt.png": "1",
+    "t-shirt.png": 2000,
+    "brown-shoes-2.png": "1",
+    "brown-shoes.png": "1",
+    "white-green-shoe.png": "1",
+    "white-shoe.png": "1",
+    "gleen.png": "1",
+    "jar.png": "1",
+    "platform.png": "1",
+    "shadow.png": "1",
+    "spooky-jar.png": "1"
   }
 }
