--- a/config.json
+++ b/config.json
@@ -1,11 +1,11 @@
 {
   "metaData": {
-    "name": "",
+    "name": "zenft",
     "description": "",
     "splitFiles": false
   },
   "useCustomNames": 0,
-  "deleteDuplicates": false,
+  "deleteDuplicates": true,
   "generateMetadata": true,
   "basePath": "/Users/marleeroth/Desktop/ZeNFT/images/",
   "outputPath": "/Users/marleeroth/Desktop/ZeNFT/output/",
@@ -17,51 +17,88 @@
     2,
     4,
     3,
+    7,
     0
   ],
   "weights": {
-    "ball-whistle.png": "10",
-    "brown-watch.png": "10",
-    "dumbell.png": "10",
-    "earing.png": "10",
-    "glasses.png": "1",
-    "green-watch-white-face.png": "01",
-    "green-watch.png": "10",
-    "juggling-balls.png": "10",
-    "keys-green-tag.png": "10",
-    "server.png": "1",
-    "whistle.png": "01",
-    "blue.png": "0101010",
-    "funky.png": "01",
-    "greenfunk.png": "101",
-    "grey.png": "01",
-    "greydiant.png": "01",
-    "orange.png": "01010",
-    "zencolor.png": "10",
-    "male-1.png": "10",
-    "male-2.png": "01",
-    "bald.png": "010",
-    "black-bald-beard.png": "1",
-    "black-beard-hair.png": "010",
-    "blonde-bald-brow.png": "10",
-    "blonde-bald.png": "1",
-    "blonde-no-beard.png": "0110",
-    "blonde.png": "0",
-    "full-hair-black.png": "0",
-    "hair-brown.png": "0",
-    "chef.png": "001",
-    "green-geo-top.png": "01",
-    "lab-coat.png": "1",
-    "name-tag-shirt.png": "1",
-    "t-shirt.png": 2000,
-    "brown-shoes-2.png": "1",
-    "brown-shoes.png": "1",
-    "white-green-shoe.png": "1",
-    "white-shoe.png": "1",
-    "gleen.png": "1",
-    "jar.png": "1",
-    "platform.png": "1",
-    "shadow.png": "1",
-    "spooky-jar.png": "1"
+    "ball-whistle.png": "13",
+    "ballcap.png": "23",
+    "blue-helmet.png": "13",
+    "chef-hat.png": "13",
+    "coffee.png": "13",
+    "cut.png": "13",
+    "dumbell.png": "13",
+    "earing.png": "13",
+    "electrician.png": "13",
+    "food-platter.png": "25",
+    "gas-mask.png": "1",
+    "glasses.png": "13",
+    "gloves.png": "13",
+    "helmet-log.png": "3",
+    "hotdog.png": "13",
+    "iphone.png": "13",
+    "juggling-balls.png": "13",
+    "keys-green-tag.png": "23",
+    "minner.png": "3",
+    "paper-towel.png": "13",
+    "pipe.png": "13",
+    "pizza-guy.png": "13",
+    "pizza.png": "13",
+    "scissors.png": "13",
+    "server.png": "13",
+    "shears.png": "21",
+    "turban.png": "13",
+    "welder.png": "5",
+    "welding mask.png": "2",
+    "whistle.png": "18",
+    "wrench.png": "19",
+    "zen-glasses.png": "13",
+    "blue.png": "100",
+    "grey.png": "100",
+    "greydiant.png": "66",
+    "orange.png": "50",
+    "zencolor.png": "100",
+    "male-1.png": "208",
+    "male-2.png": "208",
+    "bald.png": "9",
+    "black-bald-beard.png": "29",
+    "black-beard-hair.png": "35",
+    "black-flow.png": "29",
+    "black-fluffy.png": "39",
+    "blonde-bald-brow.png": "33",
+    "blonde-bald.png": "29",
+    "blonde-no-beard.png": "39",
+    "blonde.png": "29",
+    "female-brow.png": "29",
+    "female-dark-brown-brow.png": "39",
+    "full-hair-black.png": "39",
+    "hair-brown.png": "29",
+    "hijab.png": "9",
+    "apron-2.png": "19",
+    "blue-shirt.png": "33",
+    "blue-top-ombre.png": "39",
+    "brown-flannel.png": "9",
+    "chef-apron.png": "19",
+    "green-color-top.png": "39",
+    "green-geo-top.png": "39",
+    "lab-coat.png": "19",
+    "name-tag.png": "39",
+    "pinkT.png": "39",
+    "red-flannel.png": "25",
+    "suit2.png": "29",
+    "t-shirt.png": "39",
+    "zen-apron.png": "29",
+    "brown-shoes-2.png": "69",
+    "brown-shoes.png": "80",
+    "pink-shoes.png": "79",
+    "rubber-boots.png": "30",
+    "white-green-shoe.png": "79",
+    "white-shoe.png": "79",
+    "jar.png": "38",
+    "platform.png": "140",
+    "shadow.png": "238",
+    "apple-watch.png": "38",
+    "green-watch-white-face.png": "138",
+    "green-watch.png": "240"
   }
 }
