--- a/config.json
+++ b/config.json
@@ -50,21 +50,21 @@
     "turban.png": "13",
     "welder.png": "5",
     "welding mask.png": "2",
-    "whistle.png": "18",
-    "wrench.png": "19",
-    "zen-glasses.png": "13",
+    "whistle.png": "1",
+    "wrench.png": "29",
+    "zen-glasses.png": "20",
     "blue.png": "100",
     "grey.png": "100",
     "greydiant.png": "66",
     "orange.png": "50",
     "zencolor.png": "100",
-    "male-1.png": "208",
-    "male-2.png": "208",
+    "pale.png": "208",
+    "tan.png": "208",
     "bald.png": "9",
     "black-bald-beard.png": "29",
     "black-beard-hair.png": "35",
     "black-flow.png": "29",
-    "black-fluffy.png": "39",
+    "black-fro.png": "39",
     "blonde-bald-brow.png": "33",
     "blonde-bald.png": "29",
     "blonde-no-beard.png": "39",
@@ -74,21 +74,21 @@
     "full-hair-black.png": "39",
     "hair-brown.png": "29",
     "hijab.png": "9",
-    "apron.png": "19",
-    "blue-shirt.png": "33",
-    "blue-top-ombre.png": "39",
-    "brown-flannel.png": "9",
-    "chef-apron.png": "19",
-    "green-color-top.png": "39",
-    "green-geo-top.png": "39",
-    "lab-coat.png": "19",
-    "name-tag.png": "39",
-    "pinkT.png": "39",
-    "red-flannel.png": "25",
-    "suit2.png": "29",
-    "t-shirt.png": "39",
-    "grey-t.png": "29",
-    "brown-shoes-2.png": "69",
+    "apron.png": "9",
+    "blue shirt.png": "33",
+    "blue top ombre.png": "39",
+    "brown flannel.png": "9",
+    "chef apron.png": "19",
+    "green color top.png": "49",
+    "green geo top.png": "39",
+    "grey T shirt.png": "29",
+    "lab coat.png": "19",
+    "name tag T shirt.png": "29",
+    "pink T.png": "39",
+    "red flannel.png": "25",
+    "suit.png": "29",
+    "t shirt.png": "39",
+    "brown-shoes-laces.png": "69",
     "brown-shoes.png": "80",
     "pink-shoes.png": "79",
     "rubber-boots.png": "30",
